MilestoneRFAFullSandBox/src/objects/RFAUserRole__c.object
<CustomObject>
    <fields>
        <fullName>Agent1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Agent3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AgentsAssigned__c</fullName>
        <formula>IF( ISBLANK( Agent1__c) &amp;&amp;  ISBLANK( Agent2__c) &amp;&amp; ISBLANK( Agent3__c), &quot;No&quot;, &quot;Yes&quot;)</formula>
        <label>Agents Assigned?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <formula>UserName__r.Alias</formula>
        <label>Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalComments__c</fullName>
        <description>IF($RecordType.Name == &apos;Info Copy Only&apos;, &quot;Info Copy Only&quot;, &quot;&quot;)</description>
        <inlineHelpText>Add comment in both Japanese and English, if any non-Japanese recipient is involved in the approval process (either approver or info copy).</inlineHelpText>
        <label>Condition / Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalNotes__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalOrder__c</fullName>
        <defaultValue>null</defaultValue>
        <description>IF( $RecordType.Name  = &quot;Approver&quot;, 1,0) will get error in VF page</description>
        <inlineHelpText>回覧の承認順序です。数字の小さい順に承認待ち通知メールが配信されます。同じ番号の場合は同時に通知を受け取ります。</inlineHelpText>
        <label>Approval Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovalProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Process</label>
        <referenceTo>ApprovalProcess__c</referenceTo>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalRecievedDateTime__c</fullName>
        <label>ApprovalRecieved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApprovalRecommendation__c</fullName>
        <label>Approval Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Unconditionally Approved / 承認（条件なし）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved / 承認（条件付き）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected / 否認</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval / 承認待ち</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Return to Requester / 差し戻し</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ApprovalRequestedOn__c</fullName>
        <description>RFA R1 - Field to track when Approval is requested to the Approver</description>
        <label>Approval Requested On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of approval number for each approver</description>
        <label>Approval Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFA_User_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Source__c</fullName>
        <label>Approver Source</label>
        <picklist>
            <picklistValues>
                <fullName>Requester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Mgmt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasury Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fix Asset Mgr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COA Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COA Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CokeOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CokeOne Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Copy - Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CokeOne Gr.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Copy - Corporate Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Copy - BOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appendix 3.B.2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COA_Acronym__c</fullName>
        <formula>UserName__r.COA_Acronym__c</formula>
        <label>COA Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Function__c</fullName>
        <formula>Text(UserName__r.COA_Function__c)</formula>
        <label>COA Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Group__c</fullName>
        <formula>Text(UserName__r.COA_Group__c)</formula>
        <label>COA Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_L2_Function_E__c</fullName>
        <formula>UserName__r.L2_Function_E__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COA L2 Function E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_L3_Function_E__c</fullName>
        <formula>UserName__r.L3_Function_E__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COA L3 Function E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_L4_Function_E__c</fullName>
        <formula>UserName__r.L4_Function_E__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COA L4 Function E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_L_Level__c</fullName>
        <formula>UserName__r.L_level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COA L Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COA_Location_E__c</fullName>
        <formula>UserName__r.Location_E__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COA Location E</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>UserName__r.CompanyName</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountDaysofPendingApproval__c</fullName>
        <formula>TODAY() -  DATEVALUE( ApprovalRecievedDateTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountDays of Pending Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>UserName__r.Department</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoNotSendEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send E-mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Identify if the POC or CoCreator are duplicate on RFA</description>
        <label>DuplicateRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>UserName__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <formula>UserName__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2_Function__c</fullName>
        <formula>UserName__r.L2_Function_E__c</formula>
        <label>L2 Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L3_Function__c</fullName>
        <formula>UserName__r.L3_Function_E__c</formula>
        <label>L3 Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L4_Function__c</fullName>
        <formula>UserName__r.L4_Function_E__c</formula>
        <label>L4 Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>UserName__r.Location_E__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>&quot;承認プロセスに日本人以外が含まれる場合は、日本語と英語の両方でコメントの記述をお願いします。&quot;  + BR()+ 
&quot;Add comment in both Japanese and English, if any non-Japanese recipient is involved in the approval process (either approver or info copy).&quot;</defaultValue>
        <label>Note</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotifyUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifyagent1firsttime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notification to identify if an e-mail notification has been sent to the agent 1 selected user.</description>
        <label>Notifyagent1firsttime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifyagent2firsttime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notification to identify if an e-mail notification has been sent to the agent 2 selected user.</description>
        <label>Notifyagent2firsttime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifyagent3firsttime__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notification to identify if an e-mail notification has been sent to the agent 3 selected user.</description>
        <label>Notifyagent3firsttime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifyuserfirsttime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifyuserfirsttime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFAStage__c</fullName>
        <formula>TEXT(RFA__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFAStage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFA_RecordTypeId__c</fullName>
        <formula>RFA__r.RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFA RecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFA__c</fullName>
        <label>RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>RFA Approvers/Users</relationshipLabel>
        <relationshipName>RFA_User_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TECH_IsComplete__c</fullName>
        <formula>/*
updated by Jia Hu on 2013/12/03
*/
/*
IF(
  AND(
    NOT( OR (
      ISPICKVAL(ApprovalRecommendation__c, &quot;Awaiting Approval&quot;)
      ,
      ISPICKVAL(ApprovalRecommendation__c, &quot;承認待ち&quot;)
      )
    ),   
    NOT(
      ISPICKVAL(ApprovalRecommendation__c, &quot;&quot;)
    )
  ), 
  &quot;true&quot;, 
  &quot;false&quot;
)
*/

IF(
  AND(
    NOT(
      ISPICKVAL(ApprovalRecommendation__c, &quot;Awaiting Approval / 承認待ち&quot;)
    )
    ,   
    NOT(
      ISPICKVAL(ApprovalRecommendation__c, &quot;&quot;)
    )
  ), 
  &quot;true&quot;, 
  &quot;false&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_TimeInAwaitingApproval__c</fullName>
        <formula>IF( ISPICKVAL( ApprovalRecommendation__c, &apos;Awaiting Approval&apos;) , 
(NOW() -  ApprovalRequestedOn__c) , 
 ApprovalRecievedDateTime__c - ApprovalRequestedOn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysPendingApproval</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>UserName__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFAUserRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Name_Unique__c</fullName>
        <label>User Name Unique</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isComplete</label>
        <type>Checkbox</type>
    </fields>
    <label>RFA承認者/ユーザ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RFA__c</columns>
        <columns>NAME</columns>
        <columns>UserName__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegation_Dragan_Calin</fullName>
        <columns>RFA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UserName__c</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Calin Dragan</value>
        </filters>
        <label>0417-0502【Calin Dragan】Delegation</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegation_Ishizaka_Satoshi</fullName>
        <columns>RFA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UserName__c</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>TECH_TimeInAwaitingApproval__c</columns>
        <columns>ApprovalRequestedOn__c</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Ishizaka Satoshi</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <label>0216-0301【Ishizaka Satoshi】Delegation</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegation_Kevin_Prillaman</fullName>
        <columns>RFA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UserName__c</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Prillaman Kevin</value>
        </filters>
        <label>0507-0523【Prillaman Kevin】Delegation</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegation_Kobayashi_Katsunori</fullName>
        <columns>RFA__c</columns>
        <columns>UserName__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Kobayashi Katsunori</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <label>0512-0526【Kobayashi Katsunori】Delegation</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegation_Michael_Coombs</fullName>
        <columns>RFA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UserName__c</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Michael Coombs</value>
        </filters>
        <label>0503-0510【Michael Coombs】Delegation</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegation_Ozeki_Haruko</fullName>
        <columns>RFA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UserName__c</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Ozeki Haruko</value>
        </filters>
        <label>0217-0228【Ozeki Haruko】Delegation</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegation_Ozeki_Haruko_0410</fullName>
        <columns>RFA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UserName__c</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Ozeki Haruko</value>
        </filters>
        <label>0410-0418【Ozeki Haruko】Delegation</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Delegation_Singh_Gill_Shehnaz_2</fullName>
        <columns>RFA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UserName__c</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Singh Gill Shehnaz</value>
        </filters>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <label>0409-0413【Singh Gill Shehnaz】Delegation</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0516_0616_honobe_masayoshi</fullName>
        <columns>RFA__c</columns>
        <columns>UserName__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ApprovalRecommendation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Honobe Masayoshi</value>
        </filters>
        <filters>
            <field>ApprovalRecommendation__c</field>
            <operation>notContain</operation>
            <value>Unconditionally Approved / 承認（条件なし）,Conditionally Approved / 承認（条件付き）,Rejected</value>
        </filters>
        <label>0516-0616 【Honobe Masayoshi】Delegation</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>miyamori_approval</fullName>
        <columns>RFA__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UserName__c</columns>
        <columns>Agent1__c</columns>
        <columns>RFAStage__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFAUserRole__c.RUR_Approver</value>
        </filters>
        <filters>
            <field>UserName__c</field>
            <operation>equals</operation>
            <value>Maniwa Daisuke</value>
        </filters>
        <filters>
            <field>Agent1__c</field>
            <operation>equals</operation>
            <value>Maruyama Koichi</value>
        </filters>
        <filters>
            <field>RFAStage__c</field>
            <operation>equals</operation>
            <value>Return to Requester</value>
        </filters>
        <label>代理人丸山さん外す</label>
        <language>ja</language>
        <sharedTo>
            <group>PT_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Details-{00000000}</displayFormat>
        <label>Approval Details</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>RUR_Approver</fullName>
        <active>true</active>
        <description>本申請の承認者を割当てます</description>
        <label>Approver</label>
    </recordTypes>
    <recordTypes>
        <fullName>RUR_InfoCopyOnly</fullName>
        <active>true</active>
        <description>本申請の参照者を指定します</description>
        <label>Info Copy Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>RUR_PrimaryPointofContact</fullName>
        <active>true</active>
        <description>本申請の主担当者を指定します</description>
        <label>Primary Point of Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ApprovalOrder_01_NoChange_RFAOutOfDrAft</fullName>
        <active>false</active>
        <description>Could not change Approver Order when RFA is not in Draft or Return to Requester status. (RFA__c/Stage__c)</description>
        <errorConditionFormula>AND(
   AND(
      NOT( ISPICKVAL(RFA__r.Stage__c, &apos;Draft&apos;) ),
      NOT( ISPICKVAL(RFA__r.Stage__c, &apos;Return to Requester&apos;) ),
      NOT( ISCHANGED( RFAStage__c ) ) 
   )
   ,    
  ISCHANGED( ApprovalOrder__c )
)


/*
AND(
   AND(
      NOT( ISPICKVAL(RFA__r.Stage__c, &apos;Draft&apos;) ),
      NOT( ISPICKVAL(RFA__r.Stage__c, &apos;Return to Requester&apos;) ),
  PRIORVALUE(RFAStage__c) != &apos;Draft&apos;    
   )
   ,    
  ISCHANGED( ApprovalOrder__c )
)
*/</errorConditionFormula>
        <errorDisplayField>ApprovalOrder__c</errorDisplayField>
        <errorMessage>Could not change Approval Order!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approval_Order_Error</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.Id = &quot;01210000000QsJj&quot; 
&amp;&amp;  ApprovalOrder__c = 0  , true, false)</errorConditionFormula>
        <errorDisplayField>ApprovalOrder__c</errorDisplayField>
        <errorMessage>Please enter the approval order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Change_for_Approvers_from_COA</fullName>
        <active>true</active>
        <errorConditionFormula>IF( TEXT(Approver_Source__c) != null ,  ISCHANGED(UserName__c), false)</errorConditionFormula>
        <errorDisplayField>UserName__c</errorDisplayField>
        <errorMessage>Can&apos;t change the user of Approver from COA rules!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR01_CommentsMandatoryCondApp</fullName>
        <active>true</active>
        <description>RFA R1 - Approval Comments is required when Approval Recommendation provided as Conditionally Approved or Rejected</description>
        <errorConditionFormula>AND( $RecordType.DeveloperName = &apos;RUR_Approver&apos;,  
OR(
 ISPICKVAL(
   ApprovalRecommendation__c, 
  &apos;Conditionally Approved / 承認（条件付き）&apos;), 
 ISPICKVAL(
  ApprovalRecommendation__c, 
  &apos;Rejected / 否認&apos;) 
),  
ISBLANK(ApprovalComments__c) 
)

/*
AND( $RecordType.DeveloperName = &apos;RUR_Approver&apos;,  OR(ISPICKVAL(ApprovalRecommendation__c, &apos;Conditionally Approved&apos;), ISPICKVAL(ApprovalRecommendation__c, &apos;Rejected&apos;) ),  ISBLANK(ApprovalComments__c) )
*/</errorConditionFormula>
        <errorDisplayField>ApprovalComments__c</errorDisplayField>
        <errorMessage>Approval Comment is required when Approval Recommendation is selected as Conditionally Approved or Rejected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR02_UniqueAgentSelection</fullName>
        <active>true</active>
        <description>RFA R1 - Check for unique selection of agents in the system</description>
        <errorConditionFormula>OR(
AND(NOT(ISBLANK(Agent1__c)), OR(Agent1__c == Agent2__c, Agent1__c == Agent3__c)),
AND(NOT(ISBLANK(Agent2__c)), OR(Agent2__c == Agent1__c, Agent2__c == Agent3__c)), 
AND(NOT(ISBLANK(Agent3__c)), OR(Agent3__c == Agent1__c, Agent2__c == Agent3__c))
)</errorConditionFormula>
        <errorMessage>Same User can not be selected more than once as a Agent for the same Approver</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR03_ApproverCannotBeAgent</fullName>
        <active>true</active>
        <description>RFA R1 - Validation rule to restrict users for selecting the Approver as agent for itself</description>
        <errorConditionFormula>OR(UserName__c == Agent1__c, UserName__c == Agent2__c, UserName__c == Agent3__c)</errorConditionFormula>
        <errorMessage>Same User can not be selected as Approver and Agent for the Same record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR04_NoUpdRecom_in_Circul_Validatio</fullName>
        <active>false</active>
        <description>RFA R1 - Do not allow Approval Recommendation and Approval Comments to be populated unless the Approval Process lookup field is populated.

Need To Check !!! by Jia Hu on 2014/05/23</description>
        <errorConditionFormula>/*
ApprovalProcess__c == &quot;&quot;  &amp;&amp;  ApprovalComments__c != &quot;Info Copy Only&quot; &amp;&amp;
(NOT( ISBLANK( TEXT (ApprovalRecommendation__c ))) || NOT( ISBLANK(ApprovalComments__c )))
*/

ApprovalProcess__c == &quot;&quot;  &amp;&amp;  ApprovalComments__c != &quot;Info Copy Only&quot; &amp;&amp; ApprovalComments__c != &quot;Info Copy After Apply&quot; &amp;&amp;
(NOT( ISBLANK( TEXT (ApprovalRecommendation__c ))) || NOT( ISBLANK(ApprovalComments__c )))</errorConditionFormula>
        <errorMessage>The Approval Recommendation field and the Approval Comments field can only be populated once the approval record has been submitted to the Approver.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RUR_VR05_AppandAgent_in_Circul_Validatio</fullName>
        <active>true</active>
        <description>RFA R1 - Approver and Agent references cannot be changed if Approval Recommendation has been received from the Original Actor or its associated Agent</description>
        <errorConditionFormula>NOT(ISPICKVAL( ApprovalRecommendation__c, &quot;Awaiting Approval&quot;)) &amp;&amp; 
NOT(ISPICKVAL( ApprovalRecommendation__c, &quot;&quot;)) 
&amp;&amp;
(
  (ISCHANGED(UserName__c) 
   || ISCHANGED(Agent1__c) 
   || ISCHANGED(Agent2__c) 
   || ISCHANGED(Agent3__c)
)
 &amp;&amp;
 (
   NOT(
     OR($Profile.Name = &quot;System Administrator&quot;,  
        $Profile.Name = &quot;システム管理者&quot; )
     )
   )
)

/*
NOT(ISPICKVAL( ApprovalRecommendation__c, &quot;Awaiting Approval&quot;)) &amp;&amp; 
NOT(ISPICKVAL( ApprovalRecommendation__c, &quot;&quot;)) &amp;&amp;
(ISCHANGED(UserName__c) || ISCHANGED(Agent1__c) || ISCHANGED(Agent2__c) || ISCHANGED(Agent3__c))
*/</errorConditionFormula>
        <errorMessage>Approver or Agent cannot be changed after Approval Recommendation has been received.</errorMessage>
    </validationRules>
</CustomObject>